adicionada função para editar pensamento

--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
                     placeholder="Digite seu pensamento"
                     required>
           </textarea>
-            <label
-                    for="pensamento-autoria">
-                Autoria ou Fonte
-            </label>
+            <label for="pensamento-autoria">Autoria ou Fonte</label>
             <input
                     type="text"
                     id="pensamento-autoria"
@@ -49,7 +46,7 @@
                 <button
                         type="submit"
                         id="botao-salvar">
-                    Adicionar
+                    Salvar
                 </button>
                 <button
                         type="button"
