adicionada função para busca de pensamentos typeahead

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <textarea
                     id="pensamento-conteudo"
                     placeholder="Digite seu pensamento"
-                    required>
-          </textarea>
+                    required></textarea>
             <label for="pensamento-autoria">Autoria ou Fonte</label>
             <input
                     type="text"
@@ -59,6 +58,11 @@
     <span></span>
     <section id="lista-pensamentos-container">
         <h3>Meu Mural</h3>
+        <section id="busca-container">
+            <input type="text" id="campo-busca" placeholder="O que você procura ?"/>
+            <img class="lupa" src="assets/imagens/lupa.png" alt="">
+        </section>
+
         <ul id="lista-pensamentos"></ul>
     </section>
 </main>
